# TakeHomeAssignment

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  GLM Model 26.ipynb  LICENSE  MANIFEST.in  README.md  docker-compose.yml  logstash.conf  prometheus.yml  pyproject.toml  requirements.txt  run_api.sh  test_api_script.py
companyname/: _modidx.py
companyname/files/models/: preprocessor.pkl
companyname/modeling/: models.py
companyname/scripts/: train_model.py
companyname/tests/modeling/: test_models.py
grafana/data/: grafana.db
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/dashboards/default/: histogram.json  my_dashboard.json
grafana/provisioning/datasources/: datasources.yml
quarto/: README.md  _quarto.yml  index.ipynb  styles.css
statefarm/: _modidx.py
statefarm/app/: main.py  models.py
statefarm/data/: data_preparation.py
statefarm/files/models/: preprocessor.pkl
statefarm/modeling/: models.py
statefarm/scripts/: train_model.py
statefarm/tests/: conftest.py
statefarm/tests/app/: test_main.py
statefarm/tests/data/: test_data_preparation.py
statefarm/tests/modeling/: test_models.py
