[tool.poetry]
name = "statefarm"
version = "0.1.0"
description = "Statefarm take home"
authors = ["JeremyDemlow <Jeremy.Demlow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7"
numpy = "1.17.4"
pandas = "0.25"
scikit-learn = "0.23.1"
statsmodels = "0.9.0"
flake8 = "^5.0.1"
joblib= "1.3.2"
pre-commit = "^2.5.0"
black = "^22.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = {extras = ["toml"], version = "^7.3.2"}
flake8 = "^5.0.1"
flake8-bugbear = "^22.9.16"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
