[tool.poetry]
name = "companyname"
version = "0.1.0"
description = "companyname take home"
authors = ["JeremyDemlow <Jeremy.Demlow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "1.17.4"
pandas = "^1.3.3"
scikit-learn = "^1.1.0"
statsmodels = "^0.13.2"
flake8 = "^5.0.1"
joblib = "1.3.2"
scipy = "^1.7.3"
httpx = "^0.25.1"
patsy = "^0.5.3"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
black = "^23.11.0"
pre-commit = "^3.5.0"
pip = "^23.3.1"
prometheus-fastapi-instrumentator = "^6.1.0"
prometheus-client = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = {extras = ["toml"], version = "^7.3.2"}
flake8 = "^5.0.1"
flake8-bugbear = "^22.9.16"
black = "^23.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
